Fix: Emote menu sidebar collapses in height when searching for emotes #173

--- a/assets/SCSS/_emoteMenu.scss
+++ b/assets/SCSS/_emoteMenu.scss
@@ -93,6 +93,7 @@
 		max-height: 100%;
 		overflow-y: auto;
 		display: flex;
+		flex: 1 1;
 	}
 
 	&__sidebar {
